--- a/api/package.json
+++ b/api/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "14.17.3",
+    "npm": "6.14.13"
+  },
   "scripts": {
-    "start": "node index.js",
+    "start": "node ./index.js",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "",
