--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,7 @@
     "npm": "6.14.13"
   },
   "scripts": {
-    "start": "node ./index.js",
+    "start": "node index.js",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "",
